# image-roll

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml
build-dir/: metadata  metadata.debuginfo
build-dir/files/: manifest.json
debian/: postinst
src/: app.rs  file_list.rs  image.rs  image_list.rs  image_operation.rs  image_roll_ui.glade  main.rs  settings.rs  test_utils.rs  ui.rs
src/resources/: #image-roll_ui.glade#  cargo-sources.json  com.github.weclaw1.ImageRoll.desktop  com.github.weclaw1.ImageRoll.gschema.xml  com.github.weclaw1.ImageRoll.metainfo.xml  com.github.weclaw1.ImageRoll.yaml  image-roll.cmb  image-roll.desktop  image-roll.ui  image-roll_ui.glade  image_roll.desktop  image_roll_ui.glade  resources.gresource  resources.xml
src/ui/: action.rs  controllers.rs  event.rs  widgets.rs
