[package]
name = "image-roll"
version = "1.0.0"
license = "MIT"
description = "Image Roll is a simple and fast GTK image viewer with basic image manipulation tools."
homepage = "https://github.com/weclaw1/image-roll"
repository = "https://github.com/weclaw1/image-roll"
readme = "README.md"
authors = ["Robert Węcławski <r.weclawski@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.14"
env_logger = "0.8.3"
glib = "0.10.3"
gdk = "0.13.2"
gdk-pixbuf = "0.9.0"
cairo-rs = "0.9.1"
approx = "0.4.0"
anyhow = "1.0"

[dependencies.gtk]
version = "0.9.2"
features = ["v3_22_29"]

[dependencies.gio]
version = "0.9.1"
features = ["v2_44"]