[package]
name = "image-roll"
version = "1.2.0"
license = "MIT"
description = "Image Roll is a simple and fast GTK image viewer with basic image manipulation tools."
homepage = "https://github.com/weclaw1/image-roll"
repository = "https://github.com/weclaw1/image-roll"
readme = "README.md"
authors = ["Robert Węcławski <r.weclawski@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.14"
env_logger = "0.8.3"
approx = "0.4.0"
anyhow = "1.0"

[dependencies.gtk]
version = "0.14.0"
features = ["v3_22_29"]

[package.metadata.deb]
license-file = ["LICENSE", "0"]
section = "graphics"
depends = "$auto"
assets = [
    ["target/release/image-roll", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/image-roll/README", "644"],
    ["src/resources/com.github.weclaw1.ImageRoll.desktop", "usr/share/applications/", "644"],
    ["src/resources/com.github.weclaw1.ImageRoll.svg", "usr/share/icons/hicolor/scalable/apps/", "644"],
    ["src/resources/com.github.weclaw1.ImageRoll.Devel.svg", "usr/share/icons/hicolor/scalable/apps/", "644"],
    ["src/resources/com.github.weclaw1.ImageRoll-symbolic.svg", "usr/share/icons/hicolor/scalable/apps/", "644"],
]
